wrapped pictures in anchor with link

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
             <div class="flex-container product-card">
 
                 <p>
-                    <img src="assets/mundo.jpg" alt="Bowl apparatus">
+                <a href="http://www.google.com" target="_blank"
+                ><img src="assets/mundo.jpg" alt="Bowl apparatus"></a>
                     </h4>MUNDO BOWLS $48.00<h4>
                         
                     Tincidunt praesent semper feugiat nibh
@@ -90,7 +91,7 @@
                     egestas pretium aenean.
                 </p>
                 <p>
-                    <img src="assets/oriento-maVIpNNtmlQ-unsplash.jpg" alt="Vase for flowers and such">
+                    <a href="http://www.google.com" target="_blank"><img src="assets/oriento-maVIpNNtmlQ-unsplash.jpg" alt="Vase for flowers and such"></a>
                     <h4>NATUREZA VASE $37.00</h4>
 
                     Tincidunt praesent semper feugiat nibh
@@ -100,7 +101,7 @@
                     egestas pretium aenean.
                 </p>
                 <p>
-                    <img src="assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="bowls native to feira">
+                    <a href="http://www.google.com" target="_blank"><img src="assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="bowls native to feira"></a>
                     <h4>FEIRA BOWLS $29.00</h4>
 
                     Tincidunt praesent semper feugiat nibh
@@ -110,7 +111,7 @@
                     egestas pretium aenean.
                 </p>
                 <p>
-                    <img src="assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="pots, 4 quarts">
+                    <a href="http://www.google.com" target="_blank"><img src="assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="pots, 4 quarts"></a>
                     <h4>NATUREZA POTS $59.00</h4>
 
                     Tincidunt praesent semper feugiat nibh
@@ -120,7 +121,7 @@
                     egestas pretium aenean
                 </p>
                 <p>
-                    <img src="assets/linh-le-a0rE64YJDA4-unsplash.jpg" alt="Vase. like for flowers, you know?">
+                    <a href="http://www.google.com" target="_blank"><img src="assets/linh-le-a0rE64YJDA4-unsplash.jpg" alt="Vase. like for flowers, you know?"></a>
                     <h4>PEDRA VASE $31.00</h4>
 
                     Tincidunt praesent semper feugiat nibh
@@ -130,7 +131,7 @@
                     egestas pretium aenean.
                 </p>
                 <p>
-                    <img src="assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="Pots for frying in a brick oven">
+                    <a href="http://www.google.com" target="_blank"><img src="assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="Pots for frying in a brick oven"></a>
                     <h4>VIAJA POTS $57.00</h4>
 
                     Tincidunt praesent semper feugiat nibh
@@ -140,7 +141,7 @@
                     egestas pretium aenean.
                 </p>
                 <p>
-                    <img src="assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="plates designed for dishes with a sauce">
+                    <a href="http://www.google.com" target="_blank"><img src="assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="plates designed for dishes with a sauce"></a>
                     <h4>SERVIÇO PLATES $35.00</h4>
 
                     Tincidunt praesent semper feugiat nibh
@@ -150,7 +151,7 @@
                     egestas pretium aenean.
                 </p>
                 <p>
-                    <img src="assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="Vase, made in the hymalayas-Blue">
+                    <a href="http://www.google.com" target="_blank"><img src="assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="Vase, made in the hymalayas-Blue"></a>
                     <h4>CAMPEÃO VASE $37.00</h4>
 
                     Tincidunt praesent semper feugiat nibh
@@ -160,7 +161,7 @@
                     egestas pretium aenean.
                 </p>
                 <p>
-                    <img src="assets/tom-crew-SITGdvztUdg-unsplash.jpg" alt="Bowl Collection-Vintage White">
+                    <a href="http://www.google.com" target="_blank"><img src="assets/tom-crew-SITGdvztUdg-unsplash.jpg" alt="Bowl Collection-Vintage White"></a>
                     <h4>TROCA BOWLS $25.00</h4>
 
                     Tincidunt praesent semper feugiat nibh
