--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <link rel="stylesheet" href="styles.css">
     <title>Cara Cara</title>
 </head>
 <body>
     <header>
         <section id="home"></section>
         <div class="flex-container justify-evenly border-bottom align-baseline bg2">
-                <nav>
+                <nav class="nav img">
                     <a href="#home">HOME</a>
-                    <a href="#about">ABOUT</a>
-                    <a href="#products">PRODUCT</a>
-                    <a href="#contact">CONTACT</a>
+                    <a href="#about">ABOUT US</a>
+                    <a href="#products">PRODUCTS</a>
+                    <a href="#contact">CONTACT US</a>
                 </nav>
                 <div class="logo">
                     CARA <img src="assets/icons8-pottery-96.png" alt=""> CARA
