Added Learn More and Add To Cart Buttons to Index

--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
                     tellus cras adipiscing enim eu turpis
                     egestas pretium aenean.
                     </p>
+                    <a href="https://devcodecamp.helpkit.so/" target="_blank"><button>LEARN MORE</button></a>
+                    <a href="http://www.google.com" target="_blank"><button>ADD TO CART</button></a>
                 <br>
                     <a href="http://www.google.com" target="_blank"><img src="assets/oriento-maVIpNNtmlQ-unsplash.jpg" alt="Vase for flowers and such"></a>
                     <h4>NATUREZA VASE $37.00</h4>
@@ -100,6 +102,8 @@
                     tellus cras adipiscing enim eu turpis
                     egestas pretium aenean.
                     </p>
+                    <a href="https://devcodecamp.helpkit.so/" target="_blank"><button>LEARN MORE</button></a>
+                    <a href="http://www.google.com" target="_blank"><button>ADD TO CART</button></a>
                 <br>
                     <a href="http://www.google.com" target="_blank"><img src="assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="bowls native to feira"></a>
                     <h4>FEIRA BOWLS $29.00</h4>
@@ -111,6 +115,8 @@
                     tellus cras adipiscing enim eu turpis
                     egestas pretium aenean.
                     </p>
+                    <a href="https://devcodecamp.helpkit.so/" target="_blank"><button>LEARN MORE</button></a>
+                    <a href="http://www.google.com" target="_blank"><button>ADD TO CART</button></a>
                 <br>
                     <a href="http://www.google.com" target="_blank"><img src="assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="pots, 4 quarts"></a>
                     <h4>NATUREZA POTS $59.00</h4>
@@ -122,6 +128,8 @@
                     tellus cras adipiscing enim eu turpis
                     egestas pretium aenean
                     </p>
+                    <a href="https://devcodecamp.helpkit.so/" target="_blank"><button>LEARN MORE</button></a>
+                    <a href="http://www.google.com" target="_blank"><button>ADD TO CART</button></a>
                 <br>
                     <a href="http://www.google.com" target="_blank"><img src="assets/linh-le-a0rE64YJDA4-unsplash.jpg" alt="Vase. like for flowers, you know?"></a>
                     <h4>PEDRA VASE $31.00</h4>
@@ -133,6 +141,8 @@
                     tellus cras adipiscing enim eu turpis
                     egestas pretium aenean.
                     </p>
+                    <a href="https://devcodecamp.helpkit.so/" target="_blank"><button>LEARN MORE</button></a>
+                    <a href="http://www.google.com" target="_blank"><button>ADD TO CART</button></a>
                 <br>
                     <a href="http://www.google.com" target="_blank"><img src="assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="Pots for frying in a brick oven"></a>
                     <h4>VIAJA POTS $57.00</h4>
@@ -144,6 +154,8 @@
                     tellus cras adipiscing enim eu turpis
                     egestas pretium aenean.
                     </p>
+                    <a href="https://devcodecamp.helpkit.so/" target="_blank"><button>LEARN MORE</button></a>
+                    <a href="http://www.google.com" target="_blank"><button>ADD TO CART</button></a>
                 <br>
                     <a href="http://www.google.com" target="_blank"><img src="assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="plates designed for dishes with a sauce"></a>
                     <h4>SERVIÇO PLATES $35.00</h4>
@@ -155,6 +167,8 @@
                     tellus cras adipiscing enim eu turpis
                     egestas pretium aenean.
                     </p>
+                    <a href="https://devcodecamp.helpkit.so/" target="_blank"><button>LEARN MORE</button></a>
+                    <a href="http://www.google.com" target="_blank"><button>ADD TO CART</button></a>
                 <br>
                     <a href="http://www.google.com" target="_blank"><img src="assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="Vase, made in the hymalayas-Blue"></a>                    
                     <h4>CAMPEÃO VASE $37.00</h4>
@@ -166,6 +180,8 @@
                     tellus cras adipiscing enim eu turpis
                     egestas pretium aenean.
                     <p>
+                        <a href="https://devcodecamp.helpkit.so/" target="_blank"><button>LEARN MORE</button></a>
+                        <a href="http://www.google.com" target="_blank"><button>ADD TO CART</button></a>
                 <br>
                     <a href="http://www.google.com" target="_blank"><img src="assets/tom-crew-SITGdvztUdg-unsplash.jpg" alt="Bowl Collection-Vintage White"></a>
                     <h4>TROCA BOWLS $25.00</h4>
@@ -177,6 +193,8 @@
                     tellus cras adipiscing enim eu turpis
                     egestas pretium aenean.
                     </p>
+                    <a href="https://devcodecamp.helpkit.so/" target="_blank"><button>LEARN MORE</button></a>
+                    <a href="http://www.google.com" target="_blank"><button>ADD TO CART</button></a>
             </div>
             </div>
             
